src/test/resources/lox/error/result_and_then_or_nil.lox
fun foo(x) {
    if (x == 0) return Error("Cannot divide by zero");
    var result = Ok("Hello");
    return result;
}

var ok = foo(0)
            .andThen(fun(x) { return Ok(x + "!"); })
            .orNil();

print ok; // expect: nil

var ok = foo(1)
            .andThen(fun(x) { return Ok(x + "!"); })
            .orNil();

print ok; // expect: Hello!
